# Beholder

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
lib/map/: CMakeLists.txt  map.cpp  map.h
lib/topbar/: CMakeLists.txt  topbar.cpp  topbar.h
scripts/: .env  build.sh  clean.sh  start.sh
